--- a/front/index.html
+++ b/front/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>front</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<html lang="zh-CN">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <link rel="stylesheet" type="text/css" href="src/static/css/animate.css"/>
+  <title>Vonic Template</title>
+  <style type="text/css">
+    .root .navbar.visible{
+        background: transparent;
+    }
+    h1.title{
+        color:white;
+    }
+    .root_bc{
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+        filter:blur(3px);
+        background:url(src/static/img/4.jpg);
+        filter:blur(4px);
+    }
+    .navbar .navbar-container .bar.bar-header.bar-transparent{
+        background: rgba(104, 100, 124, 0.75) !important;
+    }
+
+  </style>
+</head>
+<body font="pingfang">
+    <div class="root_bc"></div>
+<von-app class="root"></von-app>
+<script src="/dist/build.js"></script>
+<script type="text/javascript">
+    function resize() {
+            var clientwidth=document.documentElement.clientWidth;
+            document.documentElement.style.fontSize=100*(clientwidth/320)+'px';
+            
+        }
+        resize();
+        window.addEventListener('resize',resize);
+</script>
+</body>
 </html>
