--- a/front/index.html
+++ b/front/index.html
@@ -11,6 +11,12 @@
     }
     h1.title{
         color:white;
+        height: 100% !important;
+    }
+    p.action{
+        height: 100% !important;
+        line-height: 0.44rem;
+        font-size: 0.18rem;
     }
     .root_bc{
         position: fixed;
@@ -20,13 +26,12 @@
         height: 100%;
         z-index: 0;
         filter:blur(3px);
-        background:url(src/static/img/4.jpg);
+        background:url(src/static/img/5.jpg);
         filter:blur(4px);
     }
     .navbar .navbar-container .bar.bar-header.bar-transparent{
         background: rgba(104, 100, 124, 0.75) !important;
     }
-
   </style>
 </head>
 <body font="pingfang">
@@ -34,7 +39,7 @@
 <von-app class="root"></von-app>
 <script src="/dist/build.js"></script>
 <script type="text/javascript">
-    function resize() {
+        function resize() {
             var clientwidth=document.documentElement.clientWidth;
             document.documentElement.style.fontSize=100*(clientwidth/320)+'px';
             
