commit order list

--- a/front/index.html
+++ b/front/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" type="text/css" href="src/static/css/animate.css"/>
-  <title>Vonic Template</title>
+  <title>托卡【司机版】</title>
   <style type="text/css">
     .root .navbar.visible{
         background: transparent;
@@ -26,7 +26,9 @@
         height: 100%;
         z-index: 0;
         filter:blur(3px);
-        background:url(src/static/img/5.jpg);
+        /*background:linear-gradient(45deg, #28675c, #49ac96, #44e88f);*/
+        background: linear-gradient(-45deg, #f9ad49, #f78e1e, #e84444);
+        background-size: cover;
         filter:blur(4px);
     }
     .navbar .navbar-container .bar.bar-header.bar-transparent{
